--- a/html-css-js/html/index.html
+++ b/html-css-js/html/index.html
@@ -98,7 +98,7 @@
   <!-- User  -->
   <section class="container section-users">
 
-    <h3 class="text-center py-5">
+    <h3 class="text-center py-5 essai">
       Nos derniers inscrits
     </h3>
 
@@ -173,65 +173,29 @@
     items: 1,
     // animateIn: "jello",
     //  animateOut: "rollOut",
-    speed: 400,
+    speed: 600,
     swipeAngle: false,
     responsive: {
-      640: {
+      400: {
         gutter: 20,
         items: 1
       },
-      700: {
+      760: {
+        items: 2,
         gutter: 30
       },
-      900: {
-        items: 2
-      },
-      1240: {
+      1000: {
         items: 3
       }
     },
-    // autoplay: true,
-    // autoplayHoverPause: true,
-    // autoplayTimeout: 3000,
-    // autoplayText: [
-    //   "▶",
-    //   "❚❚"
-    // ],
+    autoplay: true,
+    autoplayHoverPause: false,
+    autoplayTimeout: 3000,
+    autoplayButtonOutput:true,
+    mouseDrag: true,
   });
 
-  // var slider = tns({
-  //   container: '#animation1',
-  //   mode: "gallery",
-  //   items:2,
-  //   gutter: 10,
-  //   animateIn: "jellklo",
-  //   animateOut: "rollOut",
-  //   speed: 2000,
-  //   mouseDrag :true,
-  //   swipeAngle: false,
-  //   autoplay: true,
-  // autoplayHoverPause: true,
-  // autoplayTimeout: 1000,
-  // autoplayText: [
-  //   "▶",
-  //   "❚❚"
-  // ],
-
-
-  //   responsive: {
-  //     640: {
-  //       edgePadding: 20,
-  //       gutter: 20,
-  //       items: 1
-  //     },
-  //     700: {
-  //       gutter: 30
-  //     },
-  //     900: {
-  //       items: 3
-  //     }
-  //   }
-  // });
+  
 
 </script>
 
