carousel homepage_user (almost) finish

--- a/html-css-js/html/index.html
+++ b/html-css-js/html/index.html
@@ -135,12 +135,18 @@
       </figure>
     </div>
 
+    
+
   </section>
 
   <!-- Project -->
   <section class="container section-projects">
+   
 
   </section>
+
+
+  
 
 
 
@@ -170,7 +176,7 @@
 //https://github.com/ganlanyuan/tiny-slider#options
   var slider = tns({
     container: '#animation1',
-    mode: "gallery",
+    //mode: "gallery",
     items: 1,
     // animateIn: "jello",
     //  animateOut: "rollOut",
@@ -189,14 +195,24 @@
         items: 3
       }
     },
-    autoplay: false,
+    autoplay: true,
     autoplayHoverPause: false,
     autoplayTimeout: 3000,
-    autoplayButtonOutput:true,
+    autoplayButtonOutput:false,
     mouseDrag: true,
   });
 
   
+
+</script>
+
+<script>
+//   (function(){
+// $hand = $('.scaled');
+// $hand.click(function() {
+//     $hand.css('cursor','grabbing');
+// });
+// });
 
 </script>
 
