for static page

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ideal - Homepage</title>
 
-  <link rel="stylesheet" href="/html-css-js/css/reset.css">
+  <link rel="stylesheet" href="html-css-js/css/reset.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css"
     integrity="sha256-gsmEoJAws/Kd3CjuOQzLie5Q3yshhvmo7YNtBG7aaEY=" crossorigin="anonymous">
-  <link rel="stylesheet" href="/node_modules/tiny-slider/dist/tiny-slider.css">
-  <link rel="stylesheet" href="/html-css-js/css/style.css">
+  <link rel="stylesheet" href="node_modules/tiny-slider/dist/tiny-slider.css">
+  <link rel="stylesheet" href="html-css-js/css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/html-css-js/css/fakechatbot.css" />
+  <link rel="stylesheet" href="html-css-js/css/fakechatbot.css" />
 
 
 </head>
@@ -37,7 +37,7 @@
     <!-- navbar-collapse menu.// -->
     <div class="order-lg-2">
 
-      <a class="navbar-brand" href="#"><img id="logo" src="../placeholder.com-logo1.png" alt=""></a>
+      <a class="navbar-brand" href="#"><img id="logo" src="html-css-js/placeholder.com-logo1.png" alt=""></a>
     </div>
 
     <div class="order-lg-3">
@@ -192,7 +192,7 @@
 
     </footer>
 
-    
+
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
   integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -200,9 +200,9 @@
   integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
   integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-<script src="./html-css-js/js/fakechatbot.js"></script>
-<script src="./html-css-js/js/navbar.js"></script>
-<script src="../../node_modules/tiny-slider/dist/min/tiny-slider.js"></script>
+<script src="html-css-js/js/fakechatbot.js"></script>
+<script src="html-css-js/js/navbar.js"></script>
+<script src="node_modules/tiny-slider/dist/min/tiny-slider.js"></script>
 
 <script type="text/javascript">
   $(document).ready(function () {
