--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
   integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
   integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-<script src="html-css-js/js/fakechatbot.js"></script>
-<script src="html-css-js/js/navbar.js"></script>
-<script src="node_modules/tiny-slider/dist/min/tiny-slider.js"></script>
+<script src="./html-css-js/js/fakechatbot.js"></script>
+<script src="./html-css-js/js/navbar.js"></script>
+<script src="./node_modules/tiny-slider/dist/min/tiny-slider.js"></script>
 
 <script type="text/javascript">
   $(document).ready(function () {
