for static page

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         </figcaption>
       </figure>
     </div>
-
+  </section>
     <!-- Project -->
     <footer class="container d-flex justify-content-between">
       <ul class="footer">
