--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css"
     integrity="sha256-gsmEoJAws/Kd3CjuOQzLie5Q3yshhvmo7YNtBG7aaEY=" crossorigin="anonymous">
-  <link rel="stylesheet" href="./html-css-js/tiny-slider/dist/tiny-slider.css">
-  <link rel="stylesheet" href="./html-css-js/css/style.css">
+  <link rel="stylesheet" href="html-css-js/tiny-slider/dist/tiny-slider.css">
+  <link rel="stylesheet" href="html-css-js/css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="html-css-js/css/fakechatbot.css" />
 
