--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     integrity="sha256-gsmEoJAws/Kd3CjuOQzLie5Q3yshhvmo7YNtBG7aaEY=" crossorigin="anonymous">
   <link rel="stylesheet" href="html-css-js/tiny-slider/dist/tiny-slider.css">
   <link rel="stylesheet" href="html-css-js/css/style.css">
+  <link rel="stylesheet" href="html-css-js/css/index.css">
   <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="html-css-js/css/fakechatbot.css" />
 
@@ -51,13 +52,17 @@
         </div>
 
         <ul class="navbar-nav ">
-          <li class="nav-item active"> <a class="nav-link" href="#"> Se connecter </a> </li>
+          <li class="nav-item active "> <a class="nav-link button" href="#popup"> Se connecter </a> </li>
           <li class="nav-item"><a class="nav-link" href="#"> S'inscrire</a></li>
         </ul>
       </div> <!-- navbar-collapse.// -->
     </div>
-
   </nav>
+
+
+
+
+  <!-- Modal -->
 
   <!-- header (Presentation and fake conversation) -->
   <header class="container">
@@ -92,7 +97,8 @@
         <p class="text-center my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati fugit error id
           beatae nisi nulla iusto laboriosam dolorum perferendis vel!</p>
         <div class="d-flex justify-content-center my-3">
-          <button type="button" class="btn btn-outline-primary btn-login px-4 mr-3 ">Login</button>
+          <button type="button" class="btn btn-outline-primary btn-login px-4 mr-3 button"><a
+              href="#popup">Login</a></button>
           <button type="button" class="btn btn-outline-secondary btn-signin px-4">Sign In</button>
         </div>
       </div>
@@ -178,21 +184,53 @@
       </figure>
     </div>
   </section>
-    <!-- Project -->
-    <footer class="container d-flex justify-content-between">
-      <ul class="footer">
-        <li>Nous contacter</li>
-        <li>Qui sommes nous ?</li>
-        <li>Notre mission</li>
-      </ul>
-      <ul>
-        <li>Mentions légales</li>
-        <li>CGU</li>
-      </ul>
-
-    </footer>
 
 
+  <!-- modal signin -->
+  <div class="container2">
+    <div class="popup" id="popup">
+      <div class="popup-inner">
+        <div class="popup__photo">
+          <img
+            src="https://images.unsplash.com/photo-1515224526905-51c7d77c7bb8?ixlib=rb-0.3.5&s=9980646201037d28700d826b1bd096c4&auto=format&fit=crop&w=700&q=80"
+            alt="">
+        </div>
+        <div class="popup__text">
+
+          <div class="form-group">
+            <label for="exampleInputEmail1">Email address</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+              placeholder="Enter email">
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+          </div>
+          <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        </div>
+        <a class="popup__close" href="#">X</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- footer -->
+  <footer class="container d-flex justify-content-between">
+    <ul class="footer">
+      <li>Nous contacter</li>
+      <li>Qui sommes nous ?</li>
+      <li>Notre mission</li>
+    </ul>
+    <ul>
+      <li>Mentions légales</li>
+      <li>CGU</li>
+    </ul>
+  </footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
   integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -277,5 +315,7 @@
   });
 
 </script>
+
+
 
 </html>
