ajout TODO top index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!-- 
+  TODO: cacher la div de la modal (visible avant le footer )
+  TODO: div de la modal login trop petite en hauteur en mode mobile 
+ -->
 <!DOCTYPE html>
 <html lang="fr">
 <head>
