--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,6 +18,7 @@
 
 
 </head>
+
 <body>
   <!-- Nav -->
   <nav class="navbar navbar-expand-lg navbar-light justify-content-between fixed-top">
@@ -29,7 +31,7 @@
           <button class="btn btn-outline-danger btn-close float-right"> &times Close </button>
         </div>
         <ul class="navbar-nav">
-          <li class="nav-item active"> <a class="nav-link" href="#"> Idealiseurs </a> </li>
+          <li class="nav-item active"> <a class="nav-link" href="user_list.html"> Idealiseur </a> </li>
           <li class="nav-item"><a class="nav-link" href="#"> Projets</a></li>
         </ul>
       </div>
@@ -56,7 +58,6 @@
         </ul>
       </div> <!-- navbar-collapse.// -->
     </div>
-
   </nav>
 
   <!-- header (Presentation and fake conversation) -->
@@ -87,7 +88,7 @@
         </div>
       </div>
       <div class="col-lg-7 presentation order-lg-1 d-flex flex-column p-3 justify-content-lg-center">
-        <h2 class='text-center align-top my-3'>Lorem ipsum </h2>
+        <h2 class="text-center align-top my-3">Lorem ipsum </h2>
 
         <p class="text-center my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati fugit error id
           beatae nisi nulla iusto laboriosam dolorum perferendis vel!</p>
@@ -96,6 +97,7 @@
           <button type="button" class="btn btn-outline-secondary btn-signin px-4">Sign In</button>
         </div>
       </div>
+    </div>
   </header>
 
   <!-- User  -->
@@ -133,6 +135,13 @@
         <img class="scaled users img-rounded" src=" https://via.placeholder.com/300/FFFF00/000000" alt="username :">
         <figcaption>
           <h6>Name 4</h6>
+          <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, iste.</p>
+        </figcaption>
+      </figure>
+      <figure>
+        <img class="scaled users img-rounded" src=" https://via.placeholder.com/300/FFFF00/000000" alt="username :">
+        <figcaption>
+          <h6>Name 5</h6>
           <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, iste.</p>
         </figcaption>
       </figure>
@@ -176,8 +185,15 @@
           <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, iste.</p>
         </figcaption>
       </figure>
+      <figure>
+        <img class="scaled projects" src=" https://via.placeholder.com/300/FFFF00/000000" alt="username :">
+        <figcaption>
+          <h6>Name 5</h6>
+          <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, iste.</p>
+        </figcaption>
+      </figure>
     </div>
-
+</section>
     <!-- Project -->
     <footer class="container d-flex justify-content-between">
       <ul class="footer">
@@ -192,8 +208,8 @@
 
     </footer>
 
-    
-</body>
+
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
   integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
@@ -211,7 +227,6 @@
   $(".restart-btn").click(function () {
     $('#chatbot').restartChat();
   });
-
 </script>
 
 
@@ -232,11 +247,11 @@
         items: 1
       },
       760: {
-        items: 2,
+        items: 3,
         gutter: 30
       },
       1000: {
-        items: 3
+        items: 4
       }
     },
     autoplay: false,
@@ -262,11 +277,11 @@
         items: 1
       },
       760: {
-        items: 2,
+        items: 3,
         gutter: 30
       },
       1000: {
-        items: 3
+        items: 4
       }
     },
     autoplay: false,
@@ -275,7 +290,6 @@
     autoplayButtonOutput: false,
     mouseDrag: true,
   });
-
 </script>
-
+</body>
 </html>
