--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <button class="btn btn-outline-danger btn-close float-right"> &times Close </button>
         </div>
         <ul class="navbar-nav">
-          <li class="nav-item active"> <a class="nav-link" href="user_list.html"> Idealiseur </a> </li>
+          <li class="nav-item active"> <a class="nav-link" href="user_list.html"> Idealiseurs </a> </li>
           <li class="nav-item"><a class="nav-link" href="#"> Projets</a></li>
         </ul>
       </div>
